--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds": [
-      { "src": "*.php", "use": "@vercel/node" }
+      { "src": "api/*.php", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/", "status": 301, "headers": { "Location": "https://github.com/Lyccrius/cf-rating" } }
