--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
-    "builds": [
-      { "src": "api/*.php", "use": "@vercel/node" }
-    ]
-}  
+    "functions": {
+      "api/index.php": {
+        "runtime": "vercel-php@0.3.1",
+        "excludeFiles": "{test/**}",
+        "memory": 256,
+        "maxDuration": 5
+      }
+    }
+  }
+  
