--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-    "functions": {
-      "api/index.php": {
-        "runtime": "vercel-php@0.3.1",
-        "excludeFiles": "{test/**}",
-        "memory": 256,
-        "maxDuration": 5
-      }
-    }
-  }
-  
+    "builds": [
+      { "src": "api/*.php", "use": "@vercel/node" }
+    ]
+} 
