--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "builds": [
       { "src": "api/*.php", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/", "dest": "/api/php"}
     ]
-} 
+  }
+  
