--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
-    "functions": {
-      "api/index.php": {
-        "runtime": "vercel-php@0.5.2",
-        "excludeFiles": "{test/**}",
-        "memory": 256,
-        "maxDuration": 5
-      }
-    }
+    "builds": [
+      { "src": "api/*.php", "use": "@vercel/php" }
+    ],
+    "routes": [
+      { "src": "/", "status": 301, "dest": "/api/php" }
+    ]
   }
   
