--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-    "builds": [
-      { "src": "api/*.php", "use": "@vercel/php" }
-    ],
+    "functions": {
+      "api/*.php": {
+        "runtime": "vercel-php@0.5.2"
+      }
+    },
     "routes": [
-      { "src": "/", "status": 301, "dest": "/api/php" }
+      { "src": "/(.*)",  "dest": "/api/index.php" }
     ]
   }
-  
